# newton-fractal

./: .gitignore  Cargo.toml  README.md  tsconfig.json
.cargo/: config.toml
pkg/: newton_fractal.d.ts  newton_fractal.js  newton_fractal_bg.wasm  newton_fractal_bg.wasm.d.ts
scripts/: calculation.ts  colors.ts  drawing_manager.ts  drawing_worker.ts  fractal_calculation.ts  geometry_math.ts  global_values.ts  newtons_fractal.ts  plotter.ts  script.ts  test.ts  ui_logic.ts
scripts/drawing/: drawing_manager.ts  drawing_worker.ts  webgl2_drawing.ts
scripts/math/: fractal_calculation.ts  geometry.ts
scripts/visuals/: fractal_presets.ts
scripts/webgl/: boilerplater.ts  gl_manager.ts  webgl2_drawing.ts
src/: approximation.rs  drawing_config.rs  fractal_calculation.rs  fractal_plotting.rs  geometry.rs  geometry_math.rs  lib.rs  logger.rs  logging.rs  memory_manager.rs  newtons_fractal.rs  plotting.rs  polynomial.rs  simd_complex32.rs  simd_constants.rs  simd_math.rs  utils.rs
src/drawing/: config.rs  modes.rs  result.rs  worker.rs
webgl/: fragment.frag  vertex.vert
www/: calculation.js  calculation.js.map  colors.js  colors.js.map  drawing.js  drawing.js.map  drawing_manager.js  drawing_manager.js.map  drawing_worker.js  drawing_worker.js.map  fractal_calculation.js  fractal_calculation.js.map  geometry_math.js  geometry_math.js.map  global_values.js  global_values.js.map  index.html  newtons_fractal.js  newtons_fractal.js.map  plotter.js  plotter.js.map  script.js  script.js.map  sw.js  test.js  test.js.map  ui_logic.js  ui_logic.js.map
www/drawing/: drawing_manager.js  drawing_manager.js.map  drawing_worker.js  drawing_worker.js.map  webgl2_drawing.js  (+1 more)
(+35 files in other folders)
